[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rmk-probability-scale"
version = "0.1.0"
description = "Starter structure for the RMK Data Team Internship 2026 test challenge."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
